<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/switch_background"
    android:contentDescription="@string/custom_switch_content_description"
    android:orientation="horizontal">

    <Button
        android:id="@+id/first_tariff_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/switch_selector"
        android:importantForAccessibility="no"
        android:text="@string/first_tariff_label"
        android:textColor="?colorPrimary" />

    <Button
        android:id="@+id/second_tariff_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/switch_selector"
        android:importantForAccessibility="no"
        android:text="@string/second_tariff_label"
        android:textColor="?colorPrimary" />

    <Button
        android:id="@+id/third_tariff_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/switch_selector"
        android:importantForAccessibility="no"
        android:text="@string/third_tariff_label"
        android:textColor="?colorPrimary" />
</LinearLayout>