<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/priority_bad_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/priority_bad_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first_element1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.186" />

        <TextView
            android:id="@+id/second_element1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_element1" />

        <TextView
            android:id="@+id/third_element1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/first_element1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fourth_element1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_element1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/priority_good_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/priority_good_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityTraversalBefore="@id/second_element"
            android:text="@string/first_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.186" />

        <TextView
            android:id="@+id/second_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_element" />

        <TextView
            android:id="@+id/third_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityTraversalBefore="@id/fourth_element"
            android:text="@string/third_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/first_element"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fourth_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_element"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_element" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>